# hackathon_cau

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.sh  pyproject.toml
project/: alembic.ini  main.py  routers.py  settings.py
project/migrations/: env.py
project/migrations/versions/: 02296be1006a_initial.py  04ea0998abaa_initial.py  1594f40559b8_user_info.py  16443ff8483e_conducated.py  2279f3129778_user_info.py  250df41ccc67_initial.py  2865a6fe343c_training.py  3e210e0ca409_user_info.py  436a98f6976d_fixing.py  4b509f3318d5_user_info.py  5dd303da51d9_initial.py  5de99afa7c58_training.py  6829fe9830e3_user_info.py  682c71c16452_main.py  9a7265dcb0fa_user_info.py  a66ce0073f16_main.py  b618d4b062f2_initial.py  de8f164c9335_user_info.py  f7b447ea0854_diet.py  f7e59066368b_user_info.py
project/src/: __init__.py
project/src/auth/: manager.py  schemas.py  views.py
project/src/auth/models/: __init__.py  account.py  session.py  user_goal.py  user_info.py
project/src/database/: database.py  views.py
project/src/diet/: menu.py  models.py  schemas.py  views.py
project/src/diet/models/: __init__.py  ingredients.py  m2m.py  menu.py  products.py  training.py
project/src/home/: models.py  views.py
