[tool.poetry]
name = "hacaton"
version = "0.1.0"
description = ""
authors = ["Asadbek <ahikmatullayev024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
asyncpg = "^0.30.0"
pyjwt = "^2.9.0"
psycopg = { version = "*", extras = ["binary", "pool"] }
python-multipart = "^0.0.17"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = {extras = ["all"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"
greenlet = "^3.1.1"
alembic = {extras = ["sqlalchemy"], version = "^1.14.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


